<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textSize="24sp"
        style="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/calculate_autonomy"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:maxLength="10"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:hint="@string/price_power"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"/>

    <EditText
        android:id="@+id/et_km_used"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="10"
        android:maxLines="1"
        android:layout_marginTop="4dp"
        android:inputType="numberDecimal"
        android:hint="@string/km_used"
        app:layout_constraintEnd_toEndOf="@id/et_price"
        app:layout_constraintStart_toStartOf="@id/et_price"
        app:layout_constraintTop_toBottomOf="@id/et_price"/>

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/et_km_used"
        app:layout_constraintEnd_toEndOf="@id/et_km_used"
        app:layout_constraintTop_toBottomOf="@id/et_km_used"
        />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toBottomOf="@id/btn_calc"
        app:layout_constraintStart_toStartOf="@+id/btn_calc"
        />


</androidx.constraintlayout.widget.ConstraintLayout>