<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="18dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eletric_car"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/txt_price"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="16sp"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/img_car"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 300.000,00"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toTopOf="@id/txt_price"
                app:layout_constraintStart_toEndOf="@id/txt_price"/>

            <TextView
                android:id="@+id/txt_battery"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/battery"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/txt_price"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_battery_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="93,4 kWh"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toTopOf="@id/txt_battery"
                app:layout_constraintStart_toEndOf="@id/txt_battery"/>

            <TextView
                android:id="@+id/txt_power"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/power"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/txt_battery"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_power_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="646 cv"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toTopOf="@id/txt_power"
                app:layout_constraintStart_toEndOf="@id/txt_power"/>

            <TextView
                android:id="@+id/txt_recharge"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/recharge"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintTop_toBottomOf="@id/txt_power"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txt_recharge_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="28 min"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toTopOf="@id/txt_recharge"
                app:layout_constraintStart_toEndOf="@id/txt_recharge"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>